[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/ui/level_complete_screen.gd" type="Script" id=2]
[ext_resource path="res://resources/shaders/blur_shader_material.tres" type="Material" id=3]
[ext_resource path="res://resources/fonts/title_font.tres" type="DynamicFont" id=4]

[node name="LevelCompleteScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.309804, 0.309804, 0.309804, 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
margin_left = -236.5
margin_right = 236.5
margin_bottom = 78.0
custom_fonts/font = ExtResource( 4 )
text = "Level Complete!"
align = 1
valign = 1

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.3
anchor_top = 0.4
anchor_right = 0.7
anchor_bottom = 0.8
custom_constants/separation = 10
alignment = 1

[node name="NextLevelButton" type="Button" parent="Options"]
margin_top = 50.0
margin_right = 409.0
margin_bottom = 90.0
text = "Next Level"

[node name="RetryButton" type="Button" parent="Options"]
margin_top = 100.0
margin_right = 409.0
margin_bottom = 140.0
text = "Retry Level"

[node name="ExitButton" type="Button" parent="Options"]
margin_top = 150.0
margin_right = 409.0
margin_bottom = 190.0
text = "Exit to Menu"

[connection signal="pressed" from="Options/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="pressed" from="Options/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="Options/ExitButton" to="." method="_on_ExitButton_pressed"]
